feat(iam): migrate user roles structure to many-to-one, add category seeding, and update exception handling and frontend pages